Fix item readability

--- a/packages/styles/scss/themes/monokai-theme.scss
+++ b/packages/styles/scss/themes/monokai-theme.scss
@@ -67,6 +67,7 @@
 	--scrollbar-thumb-hover-color: #454a61;
 
 	--email-item-read-background-color: #11121d;
+	--email-item-read-text-color: var(--text-weak);
 }
 
 // Prominent UI specifics
